fix(content-entry): add caption UI alignment

--- a/src/applications/content-entries-app/entry/entry-captions/entry-captions-edit.component.scss
+++ b/src/applications/content-entries-app/entry/entry-captions/entry-captions-edit.component.scss
@@ -31,6 +31,7 @@
 
 	.kRow{
 		display: flex;
+    align-items: center;
 		flex-direction: row;
 		margin-top: 24px;
 		font-size: 15px;
